--- a/Documentation/Settings.yml
+++ b/Documentation/Settings.yml
@@ -8,22 +8,22 @@
 
 ---
 conf.py:
-  copyright: 2012-2013
-  project: Extension Name (Français)
-  version: x.y
-  release: x.y.z
+  copyright: 2015
+  project: Calendar for news
+  version: 1.0.0
+  release: 1.0.0
   intersphinx_mapping:
     t3tsref:
     - http://docs.typo3.org/typo3cms/TyposcriptReference/
     - null
   latex_documents:
   - - Index
-    - <extension_key>.tex
-    - Extension Name (Français)
-    - Your Name
+    - cb_newscal.tex
+    - Calendar for news
+    - Charles Brunet
     - manual
   latex_elements:
     papersize: a4paper
     pointsize: 10pt
-    preamble: \usepackage{typo3}
+    preamble: \usepackage
 ...
