--- a/Documentation/Settings.yml
+++ b/Documentation/Settings.yml
@@ -26,4 +26,7 @@ conf.py:
     papersize: a4paper
     pointsize: 10pt
     preamble: \usepackage
+  html_theme_options:
+     github_repository: cbrunet/typo3-cb_newscal
+     github_branch: master
 ...
